force-app/main/default/objects/PMC_CPQ_ProductLocation__c/PMC_CPQ_ProductLocation__c.object-meta.xml
<CustomObject>
    <description>This object is created as a part of  story to capture product and location data.</description>
    <label>Product Location</label>
    <nameField>
        <label>Product Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Locations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>