force-app/main/default/objects/PMC_CPQ_ProductLocation__c/fields/PMC_CPQ_Address__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Address__c</fullName>
    <description>This field was created as part of US to store/handle complete Detailed Address for Location.</description>
    <formula>PMC_CPQ_Location__r.PMC_CPQ_Street__c + &apos; &apos; + PMC_CPQ_Location__r.PMC_CPQ_City__c + &apos; &apos; + PMC_CPQ_Location__r.PMC_CPQ_Region__c + &apos; &apos; +  PMC_CPQ_Location__r.PMC_CPQ_Country__c + &apos; &apos;+ PMC_CPQ_Location__r.PMC_CPQ_PostalCode__c</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>