force-app/main/default/objects/PMC_CPQ_ProductLocation__c/fields/PMC_CPQ_DeletionIndicator__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeletionIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created  to check if the field is considered for Deletion.</description>
    <label>Deletion Indicator</label>
    <type>Checkbox</type>
</CustomField>