force-app/main/default/objects/PMC_CPQ_ProductLocation__c/fields/PMC_CPQ_Location__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created  to check the location details.</description>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Product Locations</relationshipLabel>
    <relationshipName>ProductLocations</relationshipName>
    <type>Lookup</type>
</CustomField>