force-app/main/default/objects/PMC_CPQ_ProductLocation__c/fields/PMC_CPQ_LocationType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LocationType__c</fullName>
    <formula>TEXT(PMC_CPQ_Location__r.LocationType)</formula>
    <label>Location Type</label>
    <type>Text</type>
</CustomField>