force-app/main/default/objects/PMC_CPQ_ProductLocation__c/fields/PMC_CPQ_OriginProductID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OriginProductID__c</fullName>
    <description>Salesforce Unique Origin Product ID</description>
    <label>Origin Product ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>