force-app/main/default/objects/PMC_CPQ_ProductLocation__c/fields/PMC_CPQ_Period__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Period__c</fullName>
    <label>Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>