force-app/main/default/objects/PMC_CPQ_ProductLocation__c/fields/PMC_CPQ_PlantCity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PlantCity__c</fullName>
    <formula>PMC_CPQ_Location__r.PMC_CPQ_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PMC_CPQ_PlantCity</label>
    <type>Text</type>
</CustomField>