force-app/main/default/objects/PMC_CPQ_ProductLocation__c/fields/PMC_CPQ_PlantCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PlantCode__c</fullName>
    <formula>PMC_CPQ_Location__r.PMC_CPQ_Plant__c</formula>
    <label>Plant Code</label>
    <type>Text</type>
</CustomField>