force-app/main/default/objects/PMC_CPQ_ProductLocation__c/fields/PMC_CPQ_ProductLocationSAPIdentifier__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductLocationSAPIdentifier__c</fullName>
    <externalId>true</externalId>
    <label>Product Location SAP Identifier</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>