force-app/main/default/objects/PMC_CPQ_ProductLocation__c/fields/PMC_CPQ_ProductName__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created as a part of story to check the product details.</description>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Locations</relationshipLabel>
    <relationshipName>ProductLocations1</relationshipName>
    <type>Lookup</type>
</CustomField>