force-app/main/default/objects/PMC_CPQ_ProductLocation__c/fields/PMC_CPQ_SAPOriginID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPOriginID__c</fullName>
    <description>This field is created  to check SAP Origin ID</description>
    <label>SAP Origin ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>