force-app/main/default/objects/PMC_CPQ_ProductLocation__c/fields/PMC_CPQ_SAPProductCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPProductCode__c</fullName>
    <description>This field is created  to check SAP Product&apos;s code.</description>
    <label>SAP Product Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>