force-app/main/default/objects/PMC_CPQ_ProductLocation__c/fields/PMC_CPQ_State__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_State__c</fullName>
    <formula>PMC_CPQ_Location__r.PMC_CPQ_State__c</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>