force-app/main/default/objects/PMC_CPQ_ProductLocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>PMC_CPQ_ProductName__c</columns>
    <columns>PMC_CPQ_Location__c</columns>
    <columns>PMC_CPQ_DeletionIndicator__c</columns>
    <columns>PMC_CPQ_SAPOriginID__c</columns>
    <columns>PMC_CPQ_SAPProductCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_CPQ_SAPOriginID__c</field>
        <operation>equals</operation>
        <value>4030</value>
    </filters>
    <label>All</label>
</ListView>